force-app/main/default/objects/Order/fields/Account_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Person__c</fullName>
    <formula>TEXT(Account.SalesPerson_Code__c)</formula>
    <label>Account Sales Person</label>
    <type>Text</type>
</CustomField>