force-app/main/default/objects/Order/fields/DRC_NBC_Account_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Account_Approval_Status__c</fullName>
    <label>Account Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>