force-app/main/default/objects/Order/fields/DRC_NBC_Billing_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Billing_Address_Id__c</fullName>
    <label>Billing Address Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>