force-app/main/default/objects/Order/fields/DRC_NBC_Chemistry__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Chemistry__c</fullName>
    <label>Chemistry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>