force-app/main/default/objects/Order/fields/DRC_NBC_Consignee_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Consignee_Bank_Account_Number__c</fullName>
    <label>Consignee Bank Account Number</label>
    <type>TextArea</type>
</CustomField>