force-app/main/default/objects/Order/fields/DRC_NBC_Consignee_Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Consignee_Bank_Address__c</fullName>
    <label>Consignee Bank Address</label>
    <type>TextArea</type>
</CustomField>