force-app/main/default/objects/Order/fields/DRC_NBC_Country_of_Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Country_of_Final_Destination__c</fullName>
    <label>Country of Final Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>