force-app/main/default/objects/Order/fields/DRC_NBC_Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Country_of_Origin__c</fullName>
    <label>Country of Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>