force-app/main/default/objects/Order/fields/DRC_NBC_Courier_date__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Courier_date__c</fullName>
    <label>Courier date</label>
    <type>Date</type>
</CustomField>