force-app/main/default/objects/Order/fields/DRC_NBC_Courier_service__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Courier_service__c</fullName>
    <label>Courier service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>