force-app/main/default/objects/Order/fields/DRC_NBC_Creater_Role__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Creater_Role__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creater Role</label>
    <type>Text</type>
</CustomField>