force-app/main/default/objects/Order/fields/DRC_NBC_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Currency_Code__c</fullName>
    <label>Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EURO</fullName>
            </value>
            <value>
                <fullName>AED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>