force-app/main/default/objects/Order/fields/DRC_NBC_Cust_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Cust_Order_Number__c</fullName>
    <label>Customer Order Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>