force-app/main/default/objects/Order/fields/DRC_NBC_Delivery_status__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Delivery_status__c</fullName>
    <label>Delivery status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Intransit</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>