force-app/main/default/objects/Order/fields/DRC_NBC_Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Delivery_Terms__c</fullName>
    <label>Delivery Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>