force-app/main/default/objects/Order/fields/DRC_NBC_Final_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Final_Dispatch_Date__c</fullName>
    <formula>IF( ISBLANK(NBC_DRC_Dispatch_Date__c) , TODAY() + 21 , NBC_DRC_Dispatch_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Dispatch Date</label>
    <type>Date</type>
</CustomField>