force-app/main/default/objects/Order/fields/DRC_NBC_Fright_Charges__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Fright_Charges__c</fullName>
    <label>Fright Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>