force-app/main/default/objects/Order/fields/DRC_NBC_HSN_Code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_HSN_Code__c</fullName>
    <label>HSN Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>