force-app/main/default/objects/Order/fields/DRC_NBC_Inco_Terms__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Inco_Terms__c</fullName>
    <label>Inco Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charges Collect (CC)</fullName>
            </value>
            <value>
                <fullName>Cost &amp; Freight (CFR)</fullName>
            </value>
            <value>
                <fullName>Cost Insurance &amp; Freight (CIF)</fullName>
            </value>
            <value>
                <fullName>Courier (COURIER)</fullName>
            </value>
            <value>
                <fullName>Carriage Paid To (CPT)</fullName>
            </value>
            <value>
                <fullName>Delivered At Place (DAP)</fullName>
            </value>
            <value>
                <fullName>Door Delivery (DD)</fullName>
            </value>
            <value>
                <fullName>Delivered Duty Paid (DDP)</fullName>
            </value>
            <value>
                <fullName>Ex Bhiwandi (EXBH)</fullName>
            </value>
            <value>
                <fullName>Ex Works (EXW)</fullName>
            </value>
            <value>
                <fullName>Free On Board (FOB)</fullName>
            </value>
            <value>
                <fullName>Freight Paid Delivered (FOR)</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
                <isActive>false</isActive>
                <label>CC</label>
            </value>
            <value>
                <fullName>CFR</fullName>
                <isActive>false</isActive>
                <label>CFR</label>
            </value>
            <value>
                <fullName>CIF</fullName>
                <isActive>false</isActive>
                <label>CIF</label>
            </value>
            <value>
                <fullName>COURIER</fullName>
                <isActive>false</isActive>
                <label>COURIER</label>
            </value>
            <value>
                <fullName>CPT</fullName>
                <isActive>false</isActive>
                <label>CPT</label>
            </value>
            <value>
                <fullName>DAP</fullName>
                <isActive>false</isActive>
                <label>DAP</label>
            </value>
            <value>
                <fullName>DD</fullName>
                <isActive>false</isActive>
                <label>DD</label>
            </value>
            <value>
                <fullName>DDP</fullName>
                <isActive>false</isActive>
                <label>DDP</label>
            </value>
            <value>
                <fullName>EXBH</fullName>
                <isActive>false</isActive>
                <label>EXBH</label>
            </value>
            <value>
                <fullName>EXW</fullName>
                <isActive>false</isActive>
                <label>EXW</label>
            </value>
            <value>
                <fullName>FOB</fullName>
                <isActive>false</isActive>
                <label>FOB</label>
            </value>
            <value>
                <fullName>FOR</fullName>
                <isActive>false</isActive>
                <label>FOR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>