force-app/main/default/objects/Order/fields/DRC_NBC_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Integration_Status__c</fullName>
    <label>Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>