force-app/main/default/objects/Order/fields/DRC_NBC_Marks_and_Numbers__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Marks_and_Numbers__c</fullName>
    <label>Marks and Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>