force-app/main/default/objects/Order/fields/DRC_NBC_Notify_Party__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Notify_Party__c</fullName>
    <label>Notify Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>