force-app/main/default/objects/Order/fields/DRC_NBC_Order_PartiallyShipped__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Order_PartiallyShipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Partially Shipped</label>
    <type>Checkbox</type>
</CustomField>