force-app/main/default/objects/Order/fields/DRC_NBC_Order_Sync_To_BC__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Order_Sync_To_BC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Sync To BC</label>
    <type>Checkbox</type>
</CustomField>