force-app/main/default/objects/Order/fields/DRC_NBC_Other_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Other_Rejection_Reason__c</fullName>
    <label>Other Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>