force-app/main/default/objects/Order/fields/DRC_NBC_Paid__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>