force-app/main/default/objects/Order/fields/DRC_NBC_Part_Shipment__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Part_Shipment__c</fullName>
    <label>Part-Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allowed</fullName>
            </value>
            <value>
                <fullName>Not Allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>