force-app/main/default/objects/Order/fields/DRC_NBC_PLACE_OF_RECEIPT_BY_CARRIAG__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_PLACE_OF_RECEIPT_BY_CARRIAG__c</fullName>
    <label>Place Of Receipt By Carriage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>