force-app/main/default/objects/Order/fields/DRC_NBC_Port_Of_Discharge__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Port_Of_Discharge__c</fullName>
    <label>Port Of Discharge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABIDJAN FHB AIRPORT</fullName>
            </value>
            <value>
                <fullName>ABIDJAN</fullName>
            </value>
            <value>
                <fullName>ADDIS ABABA</fullName>
            </value>
            <value>
                <fullName>Aden</fullName>
            </value>
            <value>
                <fullName>AKRON, USA</fullName>
            </value>
            <value>
                <fullName>ALEXANDRIA</fullName>
            </value>
            <value>
                <fullName>ALGIERS, ALGERIA</fullName>
            </value>
            <value>
                <fullName>Aliaga or Alsancak port</fullName>
            </value>
            <value>
                <fullName>ALMATY, KAZAKHSTAN</fullName>
            </value>
            <value>
                <fullName>ALTAMIRA</fullName>
            </value>
            <value>
                <fullName>AMBARLI</fullName>
            </value>
            <value>
                <fullName>ANTWERP</fullName>
            </value>
            <value>
                <fullName>ANY INDIAN AIR PORT</fullName>
            </value>
            <value>
                <fullName>ANY PORT OF INDIA</fullName>
            </value>
            <value>
                <fullName>APAPA, LAGOS</fullName>
            </value>
            <value>
                <fullName>AQABA PORT</fullName>
            </value>
            <value>
                <fullName>ARICA</fullName>
            </value>
            <value>
                <fullName>ASHDOD</fullName>
            </value>
            <value>
                <fullName>Asuncion</fullName>
            </value>
            <value>
                <fullName>AUCKLAND</fullName>
            </value>
            <value>
                <fullName>BANDAR ABBAS , IRAN</fullName>
            </value>
            <value>
                <fullName>BIRATNAGAR, NEPAL</fullName>
            </value>
            <value>
                <fullName>BA RIA VUNG TAU</fullName>
            </value>
            <value>
                <fullName>BAHRAIN</fullName>
            </value>
            <value>
                <fullName>BAKU, AZERBAIJAN</fullName>
            </value>
            <value>
                <fullName>BANDAR ABBAS</fullName>
            </value>
            <value>
                <fullName>BANGKOK, THAILAND</fullName>
            </value>
            <value>
                <fullName>BARCELONA, SPAIN</fullName>
            </value>
            <value>
                <fullName>BEIRUT PORT</fullName>
            </value>
            <value>
                <fullName>BELARUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>