force-app/main/default/objects/Order/fields/DRC_NBC_Prepayment_Method__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Prepayment_Method__c</fullName>
    <label>Prepayment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100 % Advance</fullName>
            </value>
            <value>
                <fullName>50% Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>