force-app/main/default/objects/Order/fields/DRC_NBC_Product_Information__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Product_Information__c</fullName>
    <label>Product Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organic Solvents</fullName>
            </value>
            <value>
                <fullName>Industrial Acids</fullName>
            </value>
            <value>
                <fullName>Polymer Additives</fullName>
            </value>
            <value>
                <fullName>Catalysts &amp; Enzymes</fullName>
            </value>
            <value>
                <fullName>Specialty Coatings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>