force-app/main/default/objects/Order/fields/DRC_NBC_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Record_Type__c</fullName>
    <formula>IF(
  RecordType.DeveloperName = &quot;Sample_Order&quot;,
  &quot;&lt;span style=&apos;color:red;font-weight:bold;&apos;&gt;Sample Order&lt;/span&gt;&quot;,
  IMAGE(&quot;/resource/BlueSquare?ver=2&quot;, &quot;Regular Order&quot;, 60, 140)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>