force-app/main/default/objects/Order/fields/DRC_NBC_Reject_Reason_Text__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Reject_Reason_Text__c</fullName>
    <label>Reject Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>