force-app/main/default/objects/Order/fields/DRC_NBC_Rejected_Resubmission__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Rejected_Resubmission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rejected Resubmission</label>
    <type>Checkbox</type>
</CustomField>