force-app/main/default/objects/Order/fields/DRC_NBC_Rejection_Reason1__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Rejection_Reason1__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feature not suitable</fullName>
            </value>
            <value>
                <fullName>Long delivery time</fullName>
            </value>
            <value>
                <fullName>Quality issue</fullName>
            </value>
            <value>
                <fullName>Spec mismatch</fullName>
            </value>
            <value>
                <fullName>Wrong size/variant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>