force-app/main/default/objects/Order/fields/DRC_NBC_Remarks__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Remarks__c</fullName>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>