force-app/main/default/objects/Order/fields/DRC_NBC_Required_Documents__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Required_Documents__c</fullName>
    <label>Required Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Invoice</fullName>
            </value>
            <value>
                <fullName>Packing List</fullName>
            </value>
            <value>
                <fullName>Bill of Lading</fullName>
            </value>
            <value>
                <fullName>Certificate of Analysis</fullName>
            </value>
            <value>
                <fullName>Certificate of Origin</fullName>
            </value>
            <value>
                <fullName>Insurance Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>